-issue#1839: Dummy cosmetic bug on down device selection option
-issue#1841: Data Source Stats table not properly migrated from pre 1.x Cacti plugin
-issue#1849: SNMPAgent not sending traps
-issue#1852: Reports Preview/Mails show no graphs
-issue#1889: Insecure $ENV{ENV} which running setgid
-issue#1901: Upgrade from 0.8.8h fails on external_links statement
-issue: Move Graph removal function to Graph API
-issue: Fix issue with display_custom_error_message() causing problem with system error message handling
-issue: Graph List View was not fully responsive
-issue: Typo in Dutch translations when an error occurred while downgrading
-issue: Verify all Fields not working due to Cacti 1.x upgrade error
-feature#122: Support a Site Branch Type
-feature#289: Allow external nologin access for Realtime Graphs
-feature#553: Aggregated graph does not belong to host
-feature#614: Duplicate Data Input Methods
-feature#948: Every time when creating new graph Cacti creates new datasource
-feature#973: Obtain users email and full name from ldap 
-feature#1347: Update automation logging to work better
-feature#1142: Add Site dropdown to the Graphs and Data Source pages
-feature#1184: Improve Data Input Methods editability and message handling
-feature#1282: Email notification for Automation Network discovery process
-feature#1395: Ensure messages have each new line keep the same prefix in cacti_log()
-feature#1399: Allow 'requires' to include version against a plugin
-feature#1400: User settings should have checkbox to enable overriding of global settings
-feature#1422: Automatically select the next unused data input field when clicking add on data input method
-feature#1428: Graphs: Add more information to error image
-feature#1505: Allow Device Edit from Graphs page
-feature#1527: Update Fontawesome from 4.7 to 5.0.10
-feature#1580: Support Drag & Drop for Report Items
-feature#1581: Allow Mass Adding of Graphs to Reports
-feature#1584: Allow theme selection when installing